src/objects/BDR_Service_Link__c.object
<CustomObject>
    <description>A link between a Dementia Connect Service and a Business development record</description>
    <fields>
        <fullName>BDR__c</fullName>
        <description>The business development record associated with this link</description>
        <label>Business Development Record</label>
        <referenceTo>BDR__c</referenceTo>
        <relationshipName>BDR_Service_Links</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <description>Link to the dementia connect service</description>
        <label>Dementia Connect - Service</label>
        <referenceTo>Services__c</referenceTo>
        <relationshipName>BDR_Service_Links</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>uniqueServiceLink__c</fullName>
        <label>uniqueServiceLink</label>
        <length>37</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>BDR Service Link</label>
    <nameField>
        <displayFormat>LINK-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BDR Service Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>